Test scrollbar fix

--- a/components/globals.css
+++ b/components/globals.css
@@ -45,12 +45,6 @@ body {
   color: var(--text-dark);
   background: var(--bg-light);
   font-variant-ligatures: common-ligatures;
-  -ms-overflow-style: none; /* IE and Edge */
-  scrollbar-width: none; /* Firefox */
-}
-
-::-webkit-scrollbar {
-  display: none;
 }
 
 @media (prefers-color-scheme: dark) {
